--- a/foundry_login.css
+++ b/foundry_login.css
@@ -5,82 +5,64 @@ based on code by u/bass-blowfish
 ------------------------------------------
 */
 
-:root {
-  --world-logo: url("PATH_TO_YOUR_WORLD_LOGO_IMAGE_FILE");
-  --footer-logo: url("PATH_TO_YOUR_WORLD_LOGO_IMAGE_FILE");
-  --primary-color: rgb(55, 10, 75);
-  --primary-color-filter: brightness(85%);
-  /* Set to `block` to show world title.
-   * Set to `none` to hide world title.
-  */
-  --hide-world-title: none;  
-  /* Set to `58px` if showing world title.
-   * Set to `-15px` if hiding world title.
-  */
-  --world-title-margin: -15px;
+/* CONFIGURATION AREA */
+#join-game, .watermark {
+  /* Replace "url(data:image...)" with "url("PATH_TO YOUR_IMAGE")".
+     Keep as is if you don't want to add images. */
+  --login-world-logo: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=);
+  --login-footer-logo: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=);
+
+  /* Change this to adjust the size of the footer logo */
+  --login-footer-logo-height: 25px;
+
+  /* Here you can change the base and hover color for the buttons
+     on the login form. */
+  --login-button-color: rgb(150, 12, 16);
+  --login-button-color-hover: rgb(228, 9, 19);
+
+  /* Change to "inherit" if you want to keep the text title.
+     You then also need to remove the "World Logo" declaration. */
+  --login-show-text-title: none;
+}
+
+/* World Logo - REMOVE THIS IF YOU WANT A TEXT TITLE */
+#join-game #world-title {
+  background: var(--login-world-logo);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  height: 120px !important;
+  border: none;
+  box-shadow: none;
+}
+
+/* Footer Logo */
+body.vtt.players .watermark:before {
+  display: block;
+  content: " ";
+  background: var(--login-footer-logo);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: var(--login-footer-logo-height);
+  margin-top: calc(calc(var(--login-footer-logo-height) * -1) - 5px);
+  margin-bottom: 5px;
 }
 
 /* Hide world description and session info */
-#join-game .right.flexcol, #join-game #world-title h1, #join-game .app h1, #join-game .left.flexcol .app:nth-of-type(2) {
+#join-game .right.flexcol, #join-game .app:not(#world-title) h1, #join-game .left.flexcol .app:nth-of-type(2) {
   display: none;
 }
-#join-game #world-title {
-  margin-bottom: calc(var(--world-title-margin) + 30px);
-  position: relative;
-}
+
+/* World title visibility */
 #join-game #world-title h1 {
-  display: var(--hide-world-title);
-  position: absolute;
-  bottom: calc((var(--world-title-margin) + 15px) * -1);
-  left: 0px;
-  width: 100%;
-  font-size: 1.5rem;
-  line-height: normal;
-
-  max-height: 100%;
-  background: url(../ui/denim075.png) repeat;
-  border-radius: 5px;
-  box-shadow: 0 0 20px #000;
-  padding: 0.5em;
-  color: rgb(240 240 224);
-  z-index: 30;
-
-  margin: 0;
-  background: url(../ui/denim-dark-090.png) repeat;
-  border: 2px solid rgb(17 17 17);
-  box-shadow: 0 0 10px #000;
-  color: rgb(240 240 224);
+  display: var(--login-show-text-title);
 }
 
 /* Login mask width and position */
 #join-game {
-width: 400px !important;
-top: calc(50% - 300px) !important;
-}
-
-/* Logo as world title */
-#join-game #world-title {
-background: var(--world-logo);
-background-repeat: no-repeat;
-background-size: contain;
-background-position: center;
-height: 120px !important;
-border: none;
-box-shadow: none;
-}
-
-/* D&D logo above Foundry watermark */
-body.vtt.players .watermark:before {
-display: block;
-content: " ";
-background: var(--footer-logo);
-background-repeat: no-repeat;
-background-position: center;
-background-size: contain;
-width: 100%;
-height: 25px;
-margin-top: -30px;
-margin-bottom: 5px;
+  width: 400px !important;
+  top: calc(50% - 300px) !important;
 }
 
 /* Restyle inputs */
@@ -94,43 +76,42 @@ margin-bottom: 5px;
 
 /* Restyle buttons */
 #join-game button {
-  background: var(--primary-color);
+  background: var(--login-button-color);
   border: none;
   color: #fff;
   margin-bottom: 0px !important;
 }
 
 #join-game button:hover {
-  /*background: rgb(228, 9, 19);*/
-  filter: var(--primary-color-filter);
+  background: var(--login-button-color-hover);
   box-shadow: none;
 }
 
 /* Top align form labels */
 #join-game .form-group {
-clear: both;
-display: flex;
-flex-direction: column;
-margin-bottom: 10px;
-margin-top: 0;
-overflow: hidden;
+  clear: both;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  margin-top: 0;
+  overflow: hidden;
 }
 
 #join-game .form-group label {
-line-height: 31px;
-width: 100%;
+  line-height: 31px;
+  width: 100%;
 }
 
 /* Hide placeholder text */
 #join-game input[type="password"]::placeholder {
-color:transparent;
+  color:transparent;
 }
 
 /* Change login button icon */
 #join-game button[name="join"] i.fas.fa-check {
-display: none;
+  display: none;
 }
 
 #join-game button[name="join"]:after {
-content: "\1F846";
+  content: "\1F846";
 }
